[package]
name = "hyperdav-server"
version = "0.1.0"
authors = ["Yiunsr <https://github.com/yiunsr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yiunsr/hyperdav-server"
homepage = "https://github.com/yiunsr/hyperdav-server"
description = "Basic WebDAV server as a hyper server handler."
edition = "2018"


[dependencies]
chrono = "0.4.38"
env_logger = "0.11.3"
log = "0.4.21"
url = "2.5.0"
percent-encoding = "2.3.1"
xml-rs = "0.8.20"
bytes = "1.6.0"

tokio = { version = "1", features = ["full", "tracing", ] }
tokio-util = { version = "0.7.10", features = ["full"]}
hyper = {version = "1.2.0", features = ["full"]}
hyper-util = { version = "0.1.3", features = ["full"] }
http-body = "1.0.0"
http-body-util = "0.1.1"
futures-util = "0.3.30"
mime_guess = "2.0.4"

